kde-l10n (4:4.10.5-2) UNRELEASED; urgency=low

  [ Pino Toscano ]
  * All packages: add breaks/replaces against ktouchpadenabler < 4.10.4,
    since starting from that it is standalone in kde-workspace.
    (Closes: #721868)

  [ Maximiliano Curia ]
  * debian/rules: aesthetic change, remove trailing space.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 21 Jul 2013 15:24:54 +0200

kde-l10n (4:4.10.5-1) unstable; urgency=low

  * New upstream release

 -- Maximiliano Curia <maxy@debian.org>  Sat, 13 Jul 2013 01:14:57 +0200

kde-l10n (4:4.10.4-1) experimental; urgency=low

  * New upstream release.
  * Add a watch file and download script.
  * Add myself to uploaders.
  * Bump debhelper build-dep and compat to 9.
  * Bump Standards-Version to 3.9.4.
  * Update vcs fields.

 -- Maximiliano Curia <maxy@debian.org>  Mon, 17 Jun 2013 23:17:37 +0200

kde-l10n (4:4.10.2-2) experimental; urgency=low

  [ Pino Toscano ]
  * Bump the required libkdecore5 version to 4:4.10.
  * Change provides back to kde-l10n.
  * Update breaks/replaces with all the packages of kdepim 4.4.x that have
    translations.
  * Do not exclude kdepim-runtime and kdepim anymore.
  * Update Uploaders.

 -- Sune Vuorela <sune@debian.org>  Wed, 17 Apr 2013 23:20:38 +0200

kde-l10n (4:4.10.2-1) experimental; urgency=low

  * Team upload.
  * New upstream release.
    - add languages: hi, mr
    - remove languages: id

  [ José Manuel Santamaría Lema ]
  * Bump kde-sc-dev-latest build dependency to 4:4.10.1.
  * Bump kdelibs5-dev build dependency to 4.10.
  * Use the official branding in descriptions (i.e. use "KDE Software
    Compilation" instead of "KDE 4").
  * Change section from kde to localization.

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Bump kde-sc-dev-latest dependence to >= 4:4.10.2.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 12 Apr 2013 11:14:14 -0300

kde-l10n (4:4.8.4-2) unstable; urgency=low

  * Team upload.

  [ Pino Toscano ]