@@ -7,6 +7,7 @@ kde-l10n (4:4.10.5-2) UNRELEASED; urgency=low
 
   [ Maximiliano Curia ]
   * debian/rules: aesthetic change, remove trailing space.
+  * Add build-arch and build-indep targets.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 21 Jul 2013 15:24:54 +0200
 
